<resources>
    <string name="app_name">Brew Day</string>

    <string name="hello_world">Choose a Brew Tool:</string>
    <string name="action_settings">Settings</string>
    <string name="strike_calc_title">Strike Calculator</string>
    <string name="title_activity_strike_calculator">Strike Calculator</string>
    <string name="strike_calc_prompt">Enter Grain and Mash info:</string>
    <string name="strike_calc_grain_weight">Total Grain Weight:</string>
    <string name="strike_calc_water_ratio">Mash Water/Grain Ratio:</string>
    <string name="strike_calc_rest_temp">Mash Target Temp:</string>
    <string name="strike_calc_grain_temp">Grain Temperature</string>
    <string name="strike_calc_strike_volume">Strike Water Volume:</string>
    <string name="strike_calc_strike_temp">Strike Water Temp:</string>
    <string name="unit_quart">quarts</string>
    <string name="unit_gal">gallons</string>
    <string name="unit_lb">lbs</string>
    <string name="unit_ounce">oz.</string>
    <string name="unit_deg_f">&#176; F</string>
    <string name="unit_qt_per_lb">qts/lb</string>
    <string name="unit_liter">l</string>
    <string name="unit_kilograms">kg</string>
    <string name="unit_deg_c">C</string>
    <string name="unit_min">min.</string>
    <string name="hop_timer_title">Hop Timer</string>
    <string name="title_activity_hop_timer">Hop Timer</string>
    <string name="hop_timer_label">Hop/Boil Timer:</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="boil_time_edit_title">Boil Time (min):</string>
    <string name="timer_done_text">Done!</string>
    <string name="timer_format">%1$02d:%2$02d</string>
    <string name="hop_timer_item_duration_format">%d min</string>
</resources>
