<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strike_calc_title"
        android:id="@+id/launch_strike_calc"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="41dp"
        android:onClick="launchStrikeCalculator"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/launch_hop_timer"
        android:layout_below="@+id/launch_strike_calc"
        android:layout_alignLeft="@+id/launch_strike_calc"
        android:layout_alignStart="@+id/launch_strike_calc"
        android:layout_alignRight="@+id/launch_strike_calc"
        android:layout_alignEnd="@+id/launch_strike_calc"
        android:text="@string/hop_timer_title"
        android:onClick="launchHopTimer"/>

</RelativeLayout>
