<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context=".StrikeCalculatorActivity">

    <TextView
        android:text="@string/strike_calc_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/strike_calc_data"
        android:gravity="fill_horizontal">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strike_calc_grain_weight"
                android:id="@+id/grain_wt_txt"
                android:layout_column="0"
                android:editable="false"
                android:layout_weight="0"
                android:layout_gravity="center_vertical|right"
                android:paddingRight="2dp"/>

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/grain_weight"
                android:layout_column="1"
                android:layout_weight="0"
                android:layout_margin="2dp"
                android:layout_gravity="center_vertical"
                android:focusable="true"
                android:imeOptions="actionNext"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_lb"
                android:id="@+id/grain_wt_unit"
                android:layout_column="2"
                android:layout_gravity="center_vertical"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strike_calc_water_ratio"
                android:id="@+id/water_ratio_txt"
                android:layout_column="0"
                android:layout_weight="0"
                android:layout_gravity="center_vertical|right"
                android:paddingRight="2dp"/>

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/water_ratio"
                android:text="1.25"
                android:layout_weight="0"
                android:layout_margin="2dp"
                android:layout_gravity="center_vertical"
                android:focusable="true"
                android:imeOptions="actionNext"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_qt_per_lb"
                android:id="@+id/water_ratio_unit"
                android:layout_column="2"
                android:layout_gravity="center_vertical"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strike_calc_rest_temp"
                android:id="@+id/mash_target_txt"
                android:layout_column="0"
                android:layout_weight="0"
                android:layout_gravity="center_vertical|right"
                android:paddingRight="2dp"/>

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/mash_target"
                android:layout_column="1"
                android:text="154"
                android:layout_weight="0"
                android:layout_margin="2dp"
                android:layout_gravity="center_vertical"
                android:focusable="true"
                android:imeOptions="actionNext"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_deg_f"
                android:id="@+id/mash_target_unit"
                android:layout_column="2"
                android:layout_gravity="center_vertical"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strike_calc_grain_temp"
                android:id="@+id/grain_temp_txt"
                android:layout_column="0"
                android:layout_weight="0"
                android:layout_gravity="center_vertical|right"
                android:paddingRight="2dp"/>

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/grain_temp"
                android:layout_column="1"
                android:text="65"
                android:layout_weight="0"
                android:layout_margin="2dp"
                android:layout_gravity="center_vertical"
                android:focusable="true"
                android:imeOptions="actionDone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_deg_f"
                android:id="@+id/textView3"
                android:layout_column="2"
                android:layout_gravity="center_vertical"/>

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/strike_calc_results"
        android:gravity="fill_horizontal"
        android:layout_marginTop="30dp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/strike_calc_strike_volume"
                android:id="@+id/sc_strike_vol_txt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/sc_result_volume"
                android:layout_column="1"/>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/strike_calc_strike_temp"
                android:id="@+id/strike_temp_txt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/sc_result_temp"
                android:layout_column="1"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
